--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="রোভার স্কাউট, গুরুদয়াল কলেজ, ভর্তি, স্কাউটিং, কিশোরগঞ্জ, সরকারি কলেজ, আবেদন, যুবনেতা, স্বেচ্ছাসেবক, কমিউনিটি সার্ভিস, প্রকল্প, বাংলাদেশ, শিক্ষার্থী, ছাত্রকল্যাণ, নেতৃত্ব, স্কাউট প্রশিক্ষণ, মেসেঞ্জার অব পিস, পরিবেশ, শিক্ষা, ক্যাম্প, শিবির, রোভার প্রোগ্রাম, স্কাউট অ্যাক্টিভিটি, দলগত কাজ, সামাজিক কাজ, Gurudayal Govt  College Rover Scout Group, যুব উন্নয়ন, নদী পরিষ্কার, সেবা, রোভার মিটিং, স্কাউট ইভেন্ট, সাস্টেনেবল, কমিউনিটি লিডার, স্কাউট অভিযান, সংগঠন, কার্যক্রম, রোভার প্রোজেক্ট, যুব শক্তি, প্রেরণা, স্কাউট ইতিহাস, স্কাউট কৌশল, ক্যাম্পফায়ার, স্কাউট অ্যাওয়ার্ড, নেতৃত্ব বিকাশ, স্কাউট পদ্ধতি, শৃঙ্খলা, দায়িত্বশীলতা, ভলান্টিয়ার, কমিউনিটি সার্ভিস প্রোগ্রাম, যুব নেতৃত্ব, সামাজিক দায়িত্ব, রোভার র‌্যাংক, প্রকৃতি রক্ষা, স্কাউট মিশন, শিক্ষা প্রোগ্রাম, পরিবেশ সচেতনতা, স্কাউট প্রজেক্ট, স্বেচ্ছাসেবক কাজ, ক্যাম্পিং, দলবদ্ধতা, কমিউনিটি প্রজেক্ট, মানবিক কাজ, যুব সংগঠন, রোভার প্রজেক্ট ম্যানেজমেন্ট, স্কাউট বেসিক, স্কাউট নীতি, প্রশিক্ষণ, যুব উদ্যোগ, সততা, দায়িত্ব, সেবামূলক কাজ, দলীয় শিক্ষা, রোভার নীতি, স্কাউট গাইডলাইন, স্বতঃস্ফূর্ততা, স্কাউট কার্যক্রম, নেতৃত্ব শিক্ষা, সামাজিক নেতৃত্ব, স্কাউট মডেল, যুবকর্ম, শিক্ষা উদ্যোগ, যুবসংগঠন, কমিউনিটি সচেতনতা, রোভার সেবা, স্কাউট অ্যাক্টিভিটি, রোভার প্রশিক্ষণ, যুব দক্ষতা, কমিউনিটি উন্নয়ন, স্কাউট প্রেরণা, সামাজিক প্রকল্প, ছাত্র নেতৃত্ব, যুব প্রকল্প, স্বেচ্ছাসেবক উদ্যোগ, রোভার কমিউনিটি, যুব উন্নয়ন প্রোগ্রাম, স্কাউট আর্কাইভ, সামাজিক দায়িত্বশীলতা, স্কাউট অর্জন, কমিউনিটি প্রোজেক্ট">
     <meta name="author" content="গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপ">
     <meta property="og:title" content="গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপ - ভর্তি">
-    <meta property="og:description" content="গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপে নতুন রোভারদের ভর্তি চলছে। অনলাইনে আবেদন করুন এবং স্কাউটিংয়ের রোমাঞ্চকর জগতে প্রবেশ করুন।">
+    <meta property="og:description" content="গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপে নতুন রোভার ভর্তি চলছে। অনলাইনে আবেদন করুন এবং স্কাউটিংয়ের রোমাঞ্চকর জগতে প্রবেশ করুন।">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gdgcrsg.github.io/circular/">
     <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEic19wSZLLUVZwlSOvcsnmlEtZWPu21blnfBWwpbL-QppSdtngt5-PqThIi2EFFOANk0vShth2xZQAqTazMSYD-e_UBnnDTMFDkQHMYWzqTj6_qGoEOkHF99IneAj9WFySQqi90Rwu7dMlEKo-R8oi0rbWxjSrLldhbN5hJyZPULKFsHrF0jdZtr-LfOcg/s2000/1000040482.png">
@@ -258,7 +258,7 @@
                 to bottom,
                 rgba(0, 153, 0, 0.0) 0%,    /* উপরে transparent green */
                 rgba(0, 60, 0, 0.0) 50%,   /* মাঝামাঝি light green overlay */
-                rgba(0, 100, 0, 0.4) 100%   /* নিচে dark green */
+                rgba(0, 100, 0, 0.7) 100%   /* নিচে dark green */
                 ),
                 url('https://i.postimg.cc/C5KD8MGs/retouch-2025091612125693.jpg')
                 no-repeat center center / cover;
@@ -378,6 +378,27 @@
         .about-image img:hover {
             transform: scale(1.03) rotate(2deg);
         }
+        .btn-ad {
+    background: linear-gradient(145deg, #0019b9, #0033ff); /* হালকা গ্রেডিয়েন্ট */
+    color: #ffffff;           /* টেক্সট সাদা */
+    padding: 12px 25px;       /* প্যাডিং বড় করে সুন্দর দেখানোর জন্য */
+    border: none;
+    border-radius: 12px;      /* আরও গোলাকার কোণ */
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* হালকা 3D শেডো */
+    transition: all 0.3s ease;
+    text-transform: uppercase; /* টেক্সট বড় করে */
+}
+
+.btn-ad:hover {
+    background: linear-gradient(145deg, #003d80, #0026b9); /* হোভার গ্রেডিয়েন্ট */
+    transform: translateY(-3px); /* হালকা ওঠা এফেক্ট */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* হোভার শেডো ডার্কার */
+}
+
+
 
         .about-text {
             flex: 2;
@@ -974,7 +995,9 @@
             <p>
   সাহসিকতা, সেবা ও নেতৃত্বের এক নতুন দিগন্তে স্বাগতম। আপনার উজ্জ্বল ভবিষ্যতের পথচলায় আমরা সঙ্গী!
 </p><br><br>
-            <a href="#admission" class="btn">ভর্তি আবেদন করুন</a>
+
+            <a href="#admission" style="text-decoration: none;" class="btn-ad">ভর্তি আবেদন করুন</a>
+
         </div>
     </section>
 
@@ -984,7 +1007,7 @@
             <h2 class="section-title">আমাদের সম্পর্কে</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="https://i.postimg.cc/C5KD8MGs/retouch-2025091612125693.jpg" alt="রোভার স্কাউট ক্যাম্প">
+                    <img src="https://i.postimg.cc/yNZzWKgT/received-1296052264719903.jpg" alt="রোভার স্কাউট ক্যাম্প">
                 </div>
                 <div class="about-text">
                     <h3>সেবা, শৃঙ্খলা ও আদর্শের প্রতীক</h3>
@@ -1000,7 +1023,7 @@
     <!-- Admission Section -->
     <section id="admission" class="admission">
         <div class="container admission-content">
-            <h2>নতুন রোভারদের ভর্তি চলছে!</h2>
+            <h2>নতুন রোভার ভর্তি চলছে!</h2>
             <p>আপনি যদি চ্যালেঞ্জ নিতে প্রস্তুত থাকেন এবং সমাজের জন্য কিছু করতে চান, তাহলে গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপে আপনাকে স্বাগতম। অনলাইন ফরম পূরণ করে আপনার স্কাউটিং যাত্রা শুরু করুন!</p>
             <div data-fillout-id="wqKCAzmCe8us" data-fillout-embed-type="popup" data-fillout-button-text="ভর্তি ফরম পূরণ করুন" data-fillout-dynamic-resize data-fillout-inherit-parameters data-fillout-popup-size="medium"></div>
 
@@ -1041,33 +1064,98 @@
             <h2 class="section-title">আমাদের কার্যক্রম</h2>
             <div class="activities-grid">
                 <div class="activity-card">
-                    <img src="https://i.postimg.cc/BQgSbByP/Picsart-25-10-06-18-48-26-104.png" alt="ক্যাম্পিং ও আউটডোর কার্যকলাপ">
+                    <img src="https://i.postimg.cc/BQgSbByP/Picsart-25-10-06-18-48-26-104.png" alt="জাতীয়/আঞ্চলিক ক্যাম্প সমূহে অংশগ্রহণ">
                     <div class="activity-card-content">
-                        <h3>ক্যাম্পিং ও আউটডোর</h3>
-                        <p>রোভাররা প্রকৃতির মাঝে ক্যাম্পিং, হাইকিং এবং বিভিন্ন আউটডোর কার্যক্রমে অংশ নেয়, যা তাদের শারীরিক ও মানসিক সুস্থতা বিকাশে সহায়তা করে।</p>
+                        <h3>জাতীয়/আঞ্চলিক ক্যাম্প সমূহে অংশগ্রহণ</h3>
+                        <p>জাতীয় ও আঞ্চলিক ক্যাম্প স্কাউটদের মধ্যে বন্ধুত্ব, অভিজ্ঞতা বিনিময় ও নেতৃত্ব বিকাশের এক অনন্য মঞ্চ। এসব ক্যাম্পে অংশগ্রহণ স্কাউটদের দেশপ্রেম, দায়িত্ববোধ ও সেবার মানসিকতা আরও দৃঢ় করে।</p>
                     </div>
                 </div>
                 <div class="activity-card">
-                    <img src="https://images.unsplash.com/photo-1589998059171-ee2925bb09f7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80" alt="সামাজিক সেবা কার্যক্রম">
+                    <img src="https://i.postimg.cc/bvYxLY8D/received-1700732897152300.jpg" alt="বার্ষিক তাঁবুবাস">
                     <div class="activity-card-content">
-                        <h3>সামাজিক সেবা</h3>
-                        <p>আমরা রক্তদান কর্মসূচি, বৃক্ষরোপণ, পরিচ্ছন্নতা অভিযান এবং দুর্যোগে ত্রাণ বিতরণের মতো সামাজিক সেবামূলক কাজে সক্রিয়ভাবে অংশগ্রহণ করি।</p>
+                        <h3>বার্ষিক তাঁবুবাস</h3>
+                        <p>বার্ষিক তাবুবাস স্কাউটদের আত্মনির্ভরশীলতা, শৃঙ্খলা ও দলগত জীবনের চর্চার অন্যতম সুযোগ। এটি স্কাউটদের বাস্তব জীবনের অভিজ্ঞতা ও নেতৃত্বের গুণাবলি গড়ে তোলে।</p>
                     </div>
                 </div>
                 <div class="activity-card">
-                    <img src="https://images.unsplash.com/photo-1522204523234-8729aa67e2e6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80" alt="নেতৃত্ব প্রশিক্ষণ">
+                    <img src="https://i.postimg.cc/ZYPrkyRy/received-1070825667830206.jpg" alt="ক্যাম্প-ফায়ার">
                     <div class="activity-card-content">
-                        <h3>নেতৃত্ব ও দক্ষতা উন্নয়ন</h3>
-                        <p>রোভারদের নেতৃত্ব, যোগাযোগ, দলগত কাজ এবং সিদ্ধান্ত গ্রহণের দক্ষতা বাড়ানোর জন্য নিয়মিত প্রশিক্ষণ ও কর্মশালার আয়োজন করা হয়।</p>
+                        <h3>ক্যাম্প-ফায়ার</h3>
+                        <p>ক্যাম্প-ফায়ার স্কাউটদের আনন্দ, ঐক্য ও সৃজনশীলতার প্রতীক। এটি রাতের আবহে গান, নাটক ও গল্পের মাধ্যমে ভ্রাতৃত্ববোধ জাগ্রত করে এবং দলগত চেতনাকে আরও শক্তিশালী করে তোলে।
+</p>
                     </div>
                 </div>
                 <div class="activity-card">
-                    <img src="https://images.unsplash.com/photo-1510531704581-5b92838bc377?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80" alt="সাংস্কৃতিক ও অ্যাডভেঞ্চার">
+                    <img src="https://i.postimg.cc/B6VR4wNP/Picsart-25-10-07-02-50-09-729.png" alt="প্রকৃতি পর্যবেক্ষণ">
                     <div class="activity-card-content">
-                        <h3>সাংস্কৃতিক ও অ্যাডভেঞ্চার</h3>
-                        <p>বিভিন্ন সাংস্কৃতিক অনুষ্ঠান, অ্যাডভেঞ্চারমূলক খেলাধুলা এবং ভ্রমণের মাধ্যমে রোভাররা নিজেদের মধ্যে বন্ধন সুদৃঢ় করে এবং আনন্দ উপভোগ করে।</p>
+                        <h3>প্রকৃতি পর্যবেক্ষণ ক্যাম্প</h3>
+                        <p>প্রকৃতি পর্যবেক্ষণ ক্যাম্প স্কাউটদের পরিবেশ সম্পর্কে সচেতন ও দায়িত্বশীল নাগরিক হতে সহায়তা করে। এতে তারা প্রকৃতির সঙ্গে নিবিড়ভাবে মিশে জীববৈচিত্র্য, সংরক্ষণ ও টেকসই জীবনের গুরুত্ব শিখে।</p>
                     </div>
                 </div>
+                <div class="activity-card">
+                    <img src="https://i.postimg.cc/TYYQCcc4/received-1322659668897708.jpg" alt="ডে ক্যাম্প">
+                    <div class="activity-card-content">
+                        <h3>ডে ক্যাম্প</h3>
+                        <p>ডে ক্যাম্প স্কাউটদের একদিনে দলীয় কাজ, নেতৃত্ব ও আত্মনির্ভরশীলতা শেখার সুযোগ দেয়। এতে তারা বিভিন্ন ব্যবহারিক কার্যক্রমের মাধ্যমে আনন্দের মধ্য দিয়ে শিক্ষণমূলক অভিজ্ঞতা অর্জন করে।
+</p>
+                    </div>
+                </div>
+                <div class="activity-card">
+                    <img src="https://i.postimg.cc/SKNMpZnx/received-927811528725925.jpg" alt="অ্যাডভেঞ্চার">
+                    <div class="activity-card-content">
+                        <h3>হাইকিং</h3>
+                        <p>হাইকিং স্কাউটদের শারীরিক সক্ষমতা, মানসিক দৃঢ়তা ও দলগত সমন্বয় বৃদ্ধি করে। এটি প্রকৃতির কাছাকাছি থেকে শেখার এক অনন্য অভিজ্ঞতা, যা আত্মনির্ভরতা ও সাহসিকতার বিকাশ ঘটায়।
+</p>
+                    </div>
+                </div>
+                <div class="activity-card">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgr8FmmtiXGUlGivPXMUCm5b6DnjEfrw6h55FxCB4ce_3PUrmqN9vtQsbMbj2zFVidP0vxWS_xFzamr-rTEkrVT8_pCqo89I6JXZV5HWwkldKbnyINDVNZdjN30U9hNsURk9ZOOdNCujU-QuEWXdAoGkSOSbOB9u0QBmmH1ECOMzpIJr04siOzKB_Elve0/s2048/1000032835.jpg" alt="সাংস্কৃতিক ও অ্যাডভেঞ্চার">
+                    <div class="activity-card-content">
+                        <h3>জাতীয় প্রতিযোগিতায় অংশগ্রহণ</h3>
+                        <p>জাতীয় ইয়ুথ ফোরাম স্কাউট যুবদের নেতৃত্ব, মতবিনিময় ও সিদ্ধান্ত গ্রহণের দক্ষতা গড়ে তোলে। এটি তরুণদের জাতীয় ও বৈশ্বিক পর্যায়ে ইতিবাচক পরিবর্তনের জন্য অনুপ্রাণিত করে।</p>
+                    </div>
+                </div>
+                <div class="activity-card">
+                    <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiMN56SiR94EWF9W1x-YgoUHV5DrkyvHdFzhpjU_e7-LZkwC22uIcvM8KFFLH9Spsn_pekqPSHOOdUqCuo5oMyGtPcZESSfezbaoOZfTzVJ-4TJMZmRygBxOok5Zy_TOnClDWOfp9Ojdt4Zp94Eh9h0qV4oMvlrqQtgWWGUMS7ojcR5AsLSReZQrbnmrlU/s1194/1000030800.jpg" alt="সাংস্কৃতিক ও অ্যাডভেঞ্চার">
+                    <div class="activity-card-content">
+                        <h3>আঞ্চলিক প্রতিযোগিতায় অংশগ্রহণ</h3>
+                        <p>আঞ্চলিক ইয়ুথ ফোরাম স্কাউট যুবদের নেতৃত্ব বিকাশ ও অভিজ্ঞতা বিনিময়ের একটি গুরুত্বপূর্ণ প্ল্যাটফর্ম। এটি স্থানীয় পর্যায়ে তরুণদের অংশগ্রহণ, মতামত প্রকাশ ও উদ্যোগ গ্রহণে উৎসাহিত করে।
+</p>
+                    </div>
+                </div>
+                <div class="activity-card">
+                    <img src="https://i.postimg.cc/Fs4qVcfK/retouch-2025091617592047.jpg" alt="স্কাউটিং">
+                    <div class="activity-card-content">
+                        <h3>সাপ্তাহিক ক্রু-মিটিং</h3>
+                        <p>সাপ্তাহিক ক্রু মিটিং স্কাউট সদস্যদের নিয়মিত মিলন ও অভিজ্ঞতা বিনিময়ের সুযোগ দেয়। এতে কার্যক্রম পরিকল্পনা, প্রশিক্ষণ এবং দলের মধ্যে সহযোগিতা বৃদ্ধি করা হয়।
+</p>
+                    </div>
+                </div>
+                <div class="activity-card">
+                    <img src="https://i.postimg.cc/cCBcmFCR/received-744476675304723.jpg" alt="স্কাউটিং">
+                    <div class="activity-card-content">
+                        <h3>বিভিন্ন দিবসসমূহ পালন</h3>
+                        <p>বিভিন্ন দিবসসমূহ পালন স্কাউটদের মধ্যে জাতীয় ও আন্তর্জাতিক গুরুত্ব সম্পর্কে সচেতনতা বৃদ্ধি করে। এটি ঐক্যবোধ, সামাজিক দায়বদ্ধতা ও সাংস্কৃতিক সম্মানের চেতনা গড়ে তোলে।
+</p>
+                    </div>
+                </div>
+                <div class="activity-card">
+                    <img src="https://i.postimg.cc/W4p6NG9Y/Picsart-25-10-07-03-55-35-134.jpg" alt="স্কাউটিং">
+                    <div class="activity-card-content">
+                        <h3>ডিসপ্লে প্রদর্শন</h3>
+                        <p>ডিসপ্লে প্রদর্শন স্কাউটদের সৃজনশীলতা ও দক্ষতা প্রদর্শনের সুযোগ দেয়। এটি নীতি, কর্মশৈলী এবং বিভিন্ন কার্যক্রমকে চোখে দেখানোর মাধ্যমে অনুপ্রেরণা জাগায়।
+</p>
+                    </div>
+                </div>
+                <div class="activity-card">
+                    <img src="https://i.postimg.cc/L8JvLBks/Untitled-design-17.png" alt="স্কাউটিং">
+                    <div class="activity-card-content">
+                        <h3>বর্ষ-সেরা রোভার মূল্যায়ন</h3>
+                        <p>বর্ষ সেরা রোভার মূল্যায়ন হলো বছরের মধ্যে রোভার স্কাউটদের সেবার মান, নেতৃত্বগুণ, অংশগ্রহণ এবং অঙ্গীকারের ভিত্তিতে সেরা রোভার নির্বাচন করার প্রক্রিয়া। এটি উদ্দীপনা যোগায় এবং সেবা ও নেতৃত্বে উৎকর্ষতা বাড়ায়।
+</p>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </section>
@@ -1079,7 +1167,7 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>আমাদের সাথে যোগাযোগ</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> গুরুদয়াল সরকারি কলেজ, কিশোরগঞ্জ, বাংলাদেশ</p>
+                    <p><i class="fas fa-map-marker-alt"></i> গুরুদয়াল সরকারি কলেজ, কিশোরগঞ্জ, ঢাকা, বাংলাদেশ</p>
                     <p style="font-size: 16px;">
     <i class="fas fa-envelope" style="margin-right: 5px;"></i>
     <a href="mailto:gdgckishoreganj@gmail.com" style="color: white; text-decoration: none;">
@@ -1089,7 +1177,7 @@
 
 
 
-                    <p><i class="fas fa-clock"></i> অফিস সময়: সকাল ১০টা - দুপুর ২টা (রবি-বৃহস্পতি)</p>
+                    <p><i class="fas fa-clock"></i>সময়: সকাল ১০টা - দুপুর ২টা (রবি-বৃহস্পতি)</p>
                     <div class="social-links">
                         <a href="https://www.facebook.com/groups/gdcrover/?ref=share&mibextid=NSMWBT" 
        target="_blank" 
@@ -1170,7 +1258,7 @@
         <div class="container">
             <p>&copy; <span id="currentYear"></span> গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপ। সর্বস্বত্ব সংরক্ষিত।</p>
             <!-- Image -->
-        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhCDeXufBywGlGcvjFv5OaZNnGnIFboYZgUyo9NPcDt7SH5dWhG6Kv7wOtGMm5uBfA-2RCI41U0IWscQhEPQ9_6mHg192N68FaFDDE4HIfb8zXw6Ubafj329ToS6mYTqHo8Wu8aRidwjczDQZ4Id_t7K-E32b8ZthoHTIH3r86pWwfOmFdNvgcQOOeHBDc/s2000/1000038033.png" 
+        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhPZP2K8vFf1KoRseKpu4PnH4nx74im4Rus7gdT8-8OpmRg6UjFFxVWvEkOwldYOCumYcCX4gCAbg797dMPb65kKawhvngEKInsIOfzhTj59otpOnGMCuBRhxRquZufg34lSuOPwdk7i8y7as28cWXvAq0GJVhEIOlNtc7x6rCeqzzmOBkFFhauqhbK5i8/s2400/1000040210.png" 
              alt="Rover Md. Ashfaqur Rahman Tanim" 
              style="width: 80px; height: auto; border-radius: 50%;">
 
