--- a/index.html
+++ b/index.html
@@ -991,8 +991,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero">
         <div class="container hero-content">
-            <h1>গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপ</h1>
-            <p>
+            <h1>গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপ</h1><br><p>
   সাহসিকতা, সেবা ও নেতৃত্বের এক নতুন দিগন্তে স্বাগতম। আপনার উজ্জ্বল ভবিষ্যতের পথচলায় আমরা সঙ্গী!
 </p><br><br>
 
@@ -1011,7 +1010,7 @@
                 </div>
                 <div class="about-text">
                     <h3>সেবা, শৃঙ্খলা ও আদর্শের প্রতীক</h3>
-                    <p>গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপ দীর্ঘ বছর ধরে শিক্ষার্থীদের মাঝে আত্মবিশ্বাস, নেতৃত্ব এবং সামাজিক দায়বদ্ধতা বিকাশে কাজ করে যাচ্ছে। স্কাউটিংয়ের মূলনীতি মেনে আমরা দেশ ও দশের সেবায় সর্বদা প্রস্তুত।</p>
+                    <p>গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপ দীর্ঘ প্রায় ৪৮ বছর ধরে শিক্ষার্থীদের মাঝে আত্মবিশ্বাস, নেতৃত্ব এবং সামাজিক দায়বদ্ধতা বিকাশে কাজ করে যাচ্ছে। স্কাউটিংয়ের মূলনীতি মেনে আমরা দেশ ও দশের সেবায় সর্বদা প্রস্তুত।</p>
                     <p>আমাদের রোভাররা বিভিন্ন সামাজিক কার্যক্রমে অংশগ্রহণ করে, দুর্যোগ মোকাবিলায় স্বেচ্ছাসেবক হিসেবে কাজ করে এবং পরিবেশ রক্ষায় অবদান রাখে। আমরা বিশ্বাস করি, স্কাউটিং একটি জীবন দর্শন যা একজন মানুষকে সুনাগরিক হিসেবে গড়ে তোলে।</p>
                     <p>আমাদের গ্রুপে যোগ দিয়ে আপনি আপনার সুপ্ত প্রতিভাকে বিকশিত করার সুযোগ পাবেন এবং নতুন নতুন দক্ষতা অর্জন করবেন যা আপনার ভবিষ্যৎ জীবনে কাজে লাগবে।</p>
                     <a href="#activities" class="btn btn-secondary">আমাদের কার্যক্রম দেখুন</a>
@@ -1025,6 +1024,8 @@
         <div class="container admission-content">
             <h2>নতুন রোভার ভর্তি চলছে!</h2>
             <p>আপনি যদি চ্যালেঞ্জ নিতে প্রস্তুত থাকেন এবং সমাজের জন্য কিছু করতে চান, তাহলে গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপে আপনাকে স্বাগতম। অনলাইন ফরম পূরণ করে আপনার স্কাউটিং যাত্রা শুরু করুন!</p>
+            <p style="background:#c62828; margin-top:-40px; color:#fff;padding:4px 6px;border-radius:4px;text-align:center;font-size:12px;line-height:1.4;">📢 <b>আবেদনের যোগ্যতা:</b> গুরুদয়াল সরকারি কলেজের বর্তমান অধ্যয়নরত শিক্ষার্থী হতে হবে।</p>
+
             <div data-fillout-id="wqKCAzmCe8us" data-fillout-embed-type="popup" data-fillout-button-text="ভর্তি ফরম পূরণ করুন" data-fillout-dynamic-resize data-fillout-inherit-parameters data-fillout-popup-size="medium"></div>
 
             <div style="
@@ -1177,7 +1178,7 @@
 
 
 
-                    <p><i class="fas fa-clock"></i>সময়: সকাল ১০টা - দুপুর ২টা (রবি-বৃহস্পতি)</p>
+                    <p><i class="fas fa-clock"></i>সময়: সকাল ১০টা - দুপুর ২টা (রবি-বৃহস্পতি) (সাপ্তাহিক ও সরকারি ছুটির দিন ব্যাতিত)</p>
                     <div class="social-links">
                         <a href="https://www.facebook.com/groups/gdcrover/?ref=share&mibextid=NSMWBT" 
        target="_blank" 
