--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
         <div class="container">
             <a href="#" class="logo">
                 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEic19wSZLLUVZwlSOvcsnmlEtZWPu21blnfBWwpbL-QppSdtngt5-PqThIi2EFFOANk0vShth2xZQAqTazMSYD-e_UBnnDTMFDkQHMYWzqTj6_qGoEOkHF99IneAj9WFySQqi90Rwu7dMlEKo-R8oi0rbWxjSrLldhbN5hJyZPULKFsHrF0jdZtr-LfOcg/s2000/1000040482.png" alt="রোভার স্কাউট লোগো">
-                <p style="font-size: 15px;">গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপ</p>
+                <p style="font-size: 13px;">গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপ</p><p style="font-size: 8px; margin-left: 8px;">কিশোরগঞ্জ জেলা রোভার</p>
             </a>
             <nav class="navbar">
                 <ul>
