--- a/index.html
+++ b/index.html
@@ -978,6 +978,7 @@
                     <li><a href="#activities">কার্যক্রম</a></li>
                     <li><a href="#admission">ভর্তি</a></li>
                     <li><a href="#contact">যোগাযোগ</a></li>
+                    <li><a href="https://gdgcrsg.github.io/rover-circular/">Admin Login</a></li>
                 </ul>
             </nav>
             <div class="hamburger">
