--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             transition: color var(--transition-speed);
             /* Improve touch targets */
             display: inline-block;
-            padding: 10px 0;
+            padding: 2px 0;
         }
 
         .navbar ul li a::after {
@@ -971,7 +971,7 @@
                 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEic19wSZLLUVZwlSOvcsnmlEtZWPu21blnfBWwpbL-QppSdtngt5-PqThIi2EFFOANk0vShth2xZQAqTazMSYD-e_UBnnDTMFDkQHMYWzqTj6_qGoEOkHF99IneAj9WFySQqi90Rwu7dMlEKo-R8oi0rbWxjSrLldhbN5hJyZPULKFsHrF0jdZtr-LfOcg/s2000/1000040482.png" alt="রোভার স্কাউট লোগো">
                 <p style="font-size: 13px;">গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপ</p><p style="font-size: 8px; margin-left: 8px;">কিশোরগঞ্জ জেলা রোভার</p>
             </a>
-            <nav class="navbar">
+            <nav style="font-size: 13px;" class="navbar">
                 <ul>
                     <li><a href="#hero">হোম</a></li>
                     <li><a href="#about">আমাদের সম্পর্কে</a></li>
