--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
 
         .logo img {
             height: 50px;
-            margin-right: 10px;
+            margin-right: 6px;
+            margin-left: -15px;
         }
 
         @keyframes rotateLogo {
@@ -1249,7 +1250,7 @@
         <div class="container">
             <a href="#" class="logo">
                 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEic19wSZLLUVZwlSOvcsnmlEtZWPu21blnfBWwpbL-QppSdtngt5-PqThIi2EFFOANk0vShth2xZQAqTazMSYD-e_UBnnDTMFDkQHMYWzqTj6_qGoEOkHF99IneAj9WFySQqi90Rwu7dMlEKo-R8oi0rbWxjSrLldhbN5hJyZPULKFsHrF0jdZtr-LfOcg/s2000/1000040482.png" alt="রোভার স্কাউট লোগো">
-                <p style="font-size: 13px;">গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপ</p><p style="font-size: 8px; margin-left: 8px;">কিশোরগঞ্জ জেলা রোভার</p>
+                <p style="font-size: 13px;">গুরুদয়াল সরকারি কলেজ রোভার স্কাউট গ্রুপ</p><p style="font-size: 8px; margin-left: 6px;">কিশোরগঞ্জ জেলা রোভার</p>
             </a>
             <nav style="font-size: 13px;" class="navbar">
     <ul>
