Add link for 48th anniversary in navigation menu

--- a/index.html
+++ b/index.html
@@ -1295,9 +1295,11 @@
         <li><a href="#admission"><i class="fas fa-user-graduate" style="margin-right: 5px;"></i>ভর্তি</a></li>
         <li><a href="#contact"><i class="fas fa-address-book" style="margin-right: 5px;"></i>যোগাযোগ</a></li>
         <li><a href="https://gdgcrsg.github.io/rover-circular/"><i class="fas fa-sign-in-alt" style="margin-right: 5px;"></i>Admin Login</a></li>
-        <!-- নতুন আইটেম যোগ করুন এখানে -->
         <li><a href="bsid-verify.html">
             <i class="fas fa-id-card" style="margin-right: 5px;"></i>বিএস আইডি যাচাই
+        </a></li>
+        <li><a href="48th-anniversary.html">
+            <i class="fas fa-birthday-cake" style="margin-right: 5px;"></i>৪৮তম প্রতিষ্ঠাবার্ষিকী
         </a></li>
     </ul>
 </nav>
