--- a/index.html
+++ b/index.html
@@ -1294,6 +1294,7 @@
         <li><a href="#about"><i class="fas fa-info-circle" style="margin-right: 5px;"></i>আমাদের সম্পর্কে</a></li>
         <li><a href="#activities"><i class="fas fa-running" style="margin-right: 5px;"></i>কার্যক্রম</a></li>
         <li><a href="#admission"><i class="fas fa-user-graduate" style="margin-right: 5px;"></i>ভর্তি</a></li>
+        <li><a href="members.html"><i class="fas fa-user-graduate" style="margin-right: 5px;"></i>সদস্যবৃন্দ</a></li>
         <li><a href="#contact"><i class="fas fa-address-book" style="margin-right: 5px;"></i>যোগাযোগ</a></li>
         <li><a href="bsid-verify.html">
             <i class="fas fa-id-card" style="margin-right: 5px;"></i>বিএস আইডি যাচাই
